<resources>
    <string name="app_name">Shuta</string>
    <string name="logo_image">logo image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="log_in">log in</string>
    <string name="forget_password">Forget Password?</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_home">Profile</string>
    <string name="title_dashboard">Results</string>
    <string name="title_notifications">Notifications</string>
    <string name="name">Saida Ally</string>
    <string name="email_pro">saida@email.com</string>
    <string name="fuillname">Fullname</string>
    <string name="classroom">Class</string>
    <string name="scholl_info">Nyambari Primary School\nKigogo, Dar es Salaam\nNear Tanesco</string>
    <string name="position">Position</string>
    <string name="grade">Grade</string>
    <string name="marks">Marks</string>
    <string name="subject">Subject</string>
</resources>
