<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:padding="8dp"
    android:weightSum="4"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/subject"
        android:id="@+id/subjectTextView"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/marks"
        android:padding="4dp"
        android:id="@+id/marksTextView"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:text="@string/grade"
        android:id="@+id/gradeTextView"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:padding="4dp"
        android:id="@+id/positionTextView"
        android:text="@string/position"
        android:layout_height="wrap_content" />

</LinearLayout>