<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#fff"
        android:layout_marginBottom="48dp"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="200dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:contentDescription="@string/logo_image"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:id="@+id/logoImageView"
            android:src="@drawable/logo"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="200dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="24dp"
            android:id="@+id/emailTextLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoImageView"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/username"
                android:id="@+id/usernameEditText"
                android:drawableStart="@drawable/ic_action_username"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/passwordTextLayout"
            app:layout_constraintTop_toBottomOf="@id/emailTextLayout"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:id="@+id/passwordEditText"
                android:drawableStart="@drawable/ic_action_name"
                android:inputType="textPassword"
                android:layout_height="wrap_content" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rememberMeCheckBox"
            app:layout_constraintTop_toBottomOf="@id/passwordTextLayout"
            android:layout_margin="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/remember_me"/>
        <Button
            android:layout_width="match_parent"
            android:layout_margin="48dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rememberMeCheckBox"
            android:text="@string/log_in"
            android:id="@+id/loginButton"
            android:textColor="#fff"
            android:background="@drawable/login_button_background"
            android:layout_height="60dp" />

        <Button
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            android:layout_height="wrap_content"
            style="?buttonBarButtonStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textColor="@color/colorPrimary"
            android:text="@string/forget_password"
            android:layout_margin="48dp"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
