<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/schoolInfo"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textMultiLine|text"
            android:id="@+id/schoolInfoEditText"
            android:focusable="false"
            android:editable="false"
            android:hint="School Info"
            android:drawableStart="@drawable/ic_action_location"
            android:text="@string/scholl_info"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:text="Personal Information"-->
        <!--app:layout_constraintLeft_toLeftOf="parent"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--android:textSize="20sp"-->
        <!--android:layout_height="wrap_content" />-->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/usernameLayoutFull"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/schoolInfo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:drawableStart="@drawable/ic_action_username"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:editable="false"
            android:text="Joshua Mshana"
            android:hint="@string/fuillname"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_margin="8dp"
        android:id="@+id/usernameLayoutUser"
        app:layout_constraintTop_toBottomOf="@id/usernameLayoutFull"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:editable="false"
            android:text="2016-FD-56T"
            android:drawableStart="@drawable/ic_action_username"
            android:hint="@string/username"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="8dp"
        android:id="@+id/usernameLayoutClass"
        app:layout_constraintTop_toBottomOf="@id/usernameLayoutUser"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="II"
            android:editable="false"
            android:focusable="false"
            android:drawableStart="@drawable/ic_action_class"
            android:hint="@string/classroom"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>



</android.support.constraint.ConstraintLayout>